error with whitespace fixed

--- a/genesis/css/base.css
+++ b/genesis/css/base.css
@@ -1,4 +1,4 @@
-/* $Id: base.css,v 1.1.2.9 2009/05/19 03:42:33 jmburnz Exp $ */
+/* $Id: base.css,v 1.1.2.10 2009/05/19 04:07:36 jmburnz Exp $ */
 
 /**
  * @file base.css
@@ -37,7 +37,7 @@ dfn{font-weight:bold;}
 sup,sub{line-height:0;}
 del{color:#666;}
 ins{border-bottom:none;text-decoration:none;}
-pre,code{white-space:pre;margin:1.5em 0;padding:0;}
+pre,code{margin:1.5em 0;padding:0;}
 pre,code,tt{font: 1em "Lucida Console",Monaco,"DejaVu Sans Mono",monospace;}
 sup{vertical-align:text-top;}
 sub{vertical-align:text-bottom;}
@@ -167,6 +167,6 @@ ul.primary li a{background-color:#EEE;margin-right:.08em;border-color:#CCC;paddi
 .local-tasks ul.primary li a:hover{background-color:#F5F5F5;border-color:#DDD;}
 .local-tasks ul.primary li.active a{background-color:#FFF;border-bottom-color:#FFF;}
 ul.secondary{border-bottom:1px solid #BBB;margin:0 0 1em;padding:1em 0;}
-ul.secondary li{border-right:none;padding:0 1.5em 0 0;white-space:pre;}
+ul.secondary li{border-right:none;padding:0 1.5em 0 0;}
 ul.secondary a:hover,ul.secondary a.active{border-bottom:none;text-decoration:underline;}
 #admin-menu{font:.9em Arial,Helvetica,sans-serif;}
